2006-12-11  Alexis Sukrieh  <sukria@backup-manager.org>
	* lib/files.sh
	  + change a call to mktemp so it's compliant with old versions (mktemp
	  <path>).

2006-10-23  Alexis Sukrieh  <sukria@backup-manager.org>

	* backup-manager:
	  + Renamed the trap callback "stop_me()" to "clean_exit()"; more approriate name.
	* lib/dialog.sh:
	  + Moved stop_me() to lib/backup-methods.sh - clean_exit()
	* lib/backup-methods.sh:
	  + Handles smartly interrupted builds (remove any incomplete archive and
	  friends if the build process has not been correctly finished).
	* Messages updates.

2006-10-20  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Don't build the docs by default anymore, the debiandoc tools may not
	  be there.
	  (close #134)

2006-10-20  Alexis Sukrieh  <sukria@backup-manager.org>

	* Copyright headers and debugging messages
	  - lib/backup-methods.sh
	  - lib/dialog.sh
	  - lib/files.sh
	  - lib/md5sum.sh
	  - lib/sanitize.sh
	* If the GPG encryption feature is used, make sur we check if $archive.gpg
	exists instead of $archive when building archives.

2006-10-19  Alexis Sukrieh  <sukria@backup-manager.org>

	* doc/Makefile:
	  + Don't build the doc files if they are up-to-date.
	* lib/actions.sh:
	  + Copyright statement
	  + more debug messages
	  + tail -f logfiles 
	* lib/burning-methods.sh:
	  + Copyright statement
	  + more debug messages
	  + tail -f logfiles 
	* po/backup-manager.pot, po/*.po:
	  + Updates

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* doc/Makefile:
	  + Don't build the doc files if they are up-to-date.
	* lib/backup-methods.sh:
	  + lots of debug stuff, use tail_logfile() for outputing temp logfiles to
	  stderr if the switch --debug is enabled.
	* lib/dialog.sh:
	  + function tail_logfile().

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/logger.sh:
	  + Exec the post-command when exiting.
	  (closes: #118)

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/sanitize.sh: