@@ -1,4 +1,16 @@
+2006-12-29	Alexis Sukrieh	<sukria@backup-manager.org>
+
+	* lib/sanitize.sh
+	  + Make sure BM_ENCRYPTION_RECIPIENT is defined when BM_ENCRYPTION_METHOD
+	  is set to gpg.
+	* lib/backup-methods.sh
+	  + Handle gently encryption when building meta commands.
+	  (closes: #135)
+	  + The code of the gzip and the bzip2 compressors have been merged.
+	  Less code, less bugs Luke.
+
 2006-12-11  Alexis Sukrieh  <sukria@backup-manager.org>
+
 	* lib/files.sh
 	  + change a call to mktemp so it's compliant with old versions (mktemp
 	  <path>).
